--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@shopify/react-native-skia": "^0.1.132",
     "expo": "~45.0.0",
+    "expo-app-loading": "^2.0.0",
+    "expo-blur": "~11.1.0",
+    "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-skia": "^0.0.1",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
